src/tests/snapshots/cargo_vet__tests__violations__builtin-simple-deps-violation-high-hit.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "dev:10.0.0": [
      {
        "AuditConflict": {
          "violation_source": "Local",
          "violation": {
            "criteria": "safe-to-deploy",
            "version": null,
            "delta": null,
            "violation": "*",
            "notes": null
          },
          "audit_source": "Local",
          "audit": {
            "criteria": "safe-to-deploy",
            "version": "10.0.0",
            "delta": null,
            "violation": null,
            "notes": null
          }
        }
      }
    ]
  }
}
