src/tests/snapshots/cargo_vet__tests__violations__builtin-simple-deps-violation-high-hit.snap
---
source: src/tests/violations.rs
expression: output
---
Violations Found!
  dev:10.0.0
    the own audit 10.0.0
      criteria: ["safe-to-deploy"]
    conflicts with own violation against *
      criteria: ["safe-to-deploy"]


