src/tests/snapshots/cargo_vet__tests__violations__builtin-simple-deps-violation-imply-hit.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "dev:10.0.0": [
      {
        "AuditConflict": {
          "violation_source": null,
          "violation": {
            "criteria": "safe-to-run",
            "version": null,
            "delta": null,
            "violation": "*",
            "importable": null,
            "notes": null
          },
          "audit_source": null,
          "audit": {
            "criteria": "safe-to-deploy",
            "version": "10.0.0",
            "delta": null,
            "violation": null,
            "importable": null,
            "notes": null
          }
        }
      }
    ]
  }
}
