src/tests/snapshots/cargo_vet__tests__violations__builtin-simple-deps-violation-low-hit.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "dev:10.0.0": [
      {
        "AuditConflict": {
          "audit": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": "10.0.0",
            "violation": null
          },
          "audit_source": "Local",
          "violation": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "*"
          },
          "violation_source": "Local"
        }
      }
    ]
  }
}
