src/tests/snapshots/cargo_vet__tests__violations__mock-simple-violation-cur-full-audit.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "third-party1:10.0.0": [
      {
        "AuditConflict": {
          "violation_source": null,
          "violation": {
            "criteria": "safe-to-run",
            "version": null,
            "delta": null,
            "violation": "=10",
            "notes": null
          },
          "audit_source": null,
          "audit": {
            "criteria": "safe-to-deploy",
            "version": "10.0.0",
            "delta": null,
            "violation": null,
            "notes": null
          }
        }
      }
    ]
  }
}
