src/tests/snapshots/cargo_vet__tests__violations__mock-simple-violation-cur-unaudited.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "third-party1:10.0.0": [
      {
        "UnauditedConflict": {
          "exemptions": {
            "criteria": "reviewed",
            "notes": null,
            "version": "10.0.0"
          },
          "violation": {
            "criteria": "weak-reviewed",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "=10",
            "who": null
          },
          "violation_source": "Local"
        }
      }
    ]
  }
}
